--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "Library Struct",
     "license": "MIT",
     "require": {
-        "php": "^7.1.3"
+        "php": "^7.1.3|^8.0"
     },
     "autoload": {
         "psr-4": {
